# jengine

./: CMakeLists.txt  README.md
cmake/: JEngineConfig.cmake.in  cmake_uninstall.cmake.in
include/jengine/: Controls.hpp  Game.hpp  JEngine.hpp  Object.hpp  Renderer.hpp  Resources.hpp  Visuals.hpp  collisions.hpp  jengine.hpp
include/jengine/basics/: Component.hpp  Event.hpp  EventBase.hpp  Events.hpp  Object.hpp  Vector.hpp
include/jengine/collision/: CollisionShape.hpp  CollisionShapeSquare.hpp
include/jengine/components/: ButtonComponent.hpp  CollisionComponent.hpp  Component.hpp  MuteComponent.hpp  ParallaxComponent.hpp  PhysicsComponent.hpp  SoundLoaderComponent.hpp  SpriteComponent.hpp  SquareCollisionComponent.hpp  SquareComponent.hpp  TextButtonComponent.hpp  TextComponent.hpp  TimerComponent.hpp  TransformComponent.hpp
include/jengine/core/: Controls.hpp  Game.hpp  Mixer.hpp  Physics.hpp  Renderer.hpp  Resources.hpp
include/jengine/entities/: Body.hpp  Entity.hpp
include/jengine/factories/: Visuals.hpp
include/jengine/systems/: Timer.hpp
include/jengine/utils/: Timer.hpp  uuid.hpp
include/jengine/visuals/: Button.hpp  Label.hpp  Square.hpp  Text.hpp  TextButton.hpp  Visual.hpp
src/: Controls.cpp  Game.cpp  JEngine.cpp  Object.cpp  Renderer.cpp  Resources.cpp  Vector.cpp  Visuals.cpp  collisions.cpp
src/basics/: Object.cpp  Vector.cpp
src/collision/: CollisionShape.cpp  CollisionShapeSquare.cpp
src/components/: ButtonComponent.cpp  CollisionComponent.cpp  MuteComponent.cpp  ParallaxComponent.cpp  PhysicsComponent.cpp  SoundLoaderComponent.cpp  SpriteComponent.cpp  SquareCollisionComponent.cpp  SquareComponent.cpp  TextButtonComponent.cpp  TextComponent.cpp  TimerComponent.cpp  TransformComponent.cpp
src/core/: Controls.cpp  Game.cpp  Mixer.cpp  Physics.cpp  Renderer.cpp  Resources.cpp
src/entites/: Body.cpp  Entity.cpp
src/factories/: Visuals.cpp  collisions.cpp
src/systems/: Timer.cpp
src/utils/: Timer.cpp  uuid.cpp
src/visuals/: Button.cpp  Label.cpp  Square.cpp  Text.cpp  TextButton.cpp  Visual.cpp
tests/: CMakeLists.txt  entity_test.cpp  game_tests.cpp  object_test.cpp
